// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<nav
  className="css-1gl8162"
  data-cy="nav"
>
  <div
    className="css-1999t8h"
  >
    <a
      href="/"
    >
      thisbounty.com
    </a>
  </div>
  <div
    className="css-vil3vy"
  >
    <button
      className="chakra-button css-1hpk4rx"
      data-cy="signIn"
      onClick={[Function]}
    >
      Sign in
    </button>
  </div>
</nav>
`;

exports[`renders correctly 2`] = `
<nav
  className="css-1gl8162"
  data-cy="nav"
>
  <div
    className="css-1999t8h"
  >
    <a
      href="/"
    >
      thisbounty.com
    </a>
  </div>
  <div
    className="css-ade8ji"
  >
    <div
      className="chakra-stack css-1y5q8ss"
    >
      <p
        className="chakra-text css-1lj023j"
      >
        Welcome, 
        test
      </p>
      <button
        className="chakra-button css-1hpk4rx"
        data-cy="signOut"
        onClick={[Function]}
      >
        Sign out
      </button>
    </div>
  </div>
</nav>
`;
